# nexus-llhal-stm32f103

./: CMakeLists.txt  LICENSE  README.md  west.yml
include/: nhal_pin_stm32f103.h  stm32f103.h  stm32f103_clock.h  stm32f103_clock_defs.h  stm32f103_exti.h  stm32f103_exti_defs.h  stm32f103_gpio.h  stm32f103_gpio_defs.h  stm32f103_helpers.h  stm32f103_i2c.h  stm32f103_i2c_defs.h  stm32f103_mcu.h  stm32f103_mcu_defs.h  stm32f103_registers.h  stm32f103_spi.h  stm32f103_spi_defs.h  stm32f103_timing.h  stm32f103_uart.h  stm32f103_uart_defs.h
src/: nhal_common.c  nhal_i2c_master_stm32f103.c  nhal_pin_stm32f103.c  nhal_spi_master_stm32f103.c  nhal_uart_stm32f103.c  stm32f103_clock.c  stm32f103_gpio.c  stm32f103_helpers.c  stm32f103_timing.c  stm32f103_uart.c
src/internal/: stm32f103_internal.c  stm32f103_internal.h
